=======
CHANGES
=======


----
18.7
----

* Update dependency on certify.
* Pull Request #160: Improve detection of gui script in
  ``easy_install._adjust_header``.

------
18.6.1
------

* Issue #464: Correct regression in invocation of superclass on old-style
  class on Python 2.

----
18.6
----

* Issue #439: When installing entry_point scripts under development,
  omit the version number of the package, allowing any version of the
  package to be used.

----
18.5
----

* In preparation for dropping support for Python 3.2, a warning is
  now logged when pkg_resources is imported on Python 3.2 or earlier
  Python 3 versions.
* `Add support for python_platform_implementation environment marker
  <https://github.com/jaraco/setuptools/pull/28>`_.
* `Fix dictionary mutation during iteration
  <https://github.com/jaraco/setuptools/pull/29>`_.

----
18.4
----

* Issue #446: Test command now always invokes unittest, even
  if no test suite is supplied.

------
18.3.2
------

* Correct another regression in setuptools.findall
  where the fix for Python #12885 was lost.

------
18.3.1
------

* Issue #425: Correct regression in setuptools.findall.

----
18.3
----

* Setuptools now allows disabling of the manipulation of the sys.path
  during the processing of the easy-install.pth file. To do so, set
  the environment variable ``SETUPTOOLS_SYS_PATH_TECHNIQUE`` to
  anything but "rewrite" (consider "raw"). During any install operation
  with manipulation disabled, setuptools packages will be appended to
  sys.path naturally.

  Future versions may change the default behavior to disable
  manipulation. If so, the default behavior can be retained by setting
  the variable to "rewrite".

* Issue #257: ``easy_install --version`` now shows more detail
  about the installation location and Python version.

* Refactor setuptools.findall in preparation for re-submission
  back to distutils.

----
18.2
----

* Issue #412: More efficient directory search in ``find_packages``.

----