@@ -10,6 +10,8 @@ CHANGES
 * Update dependency on certify.
 * Pull Request #160: Improve detection of gui script in
   ``easy_install._adjust_header``.
+* Made ``test.test_args`` a non-data property; alternate fix
+  for the issue reported in Pull Request #155.
 
 ------
 18.6.1
